--- a/AoC2020.csproj
+++ b/AoC2020.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <NoWarn>IDE0042,IDE0008</NoWarn>
   </PropertyGroup>
 
   <ItemGroup> 
